[gd_scene load_steps=9 format=3 uid="uid://cvqooawhyqyqw"]

[ext_resource type="Script" path="res://player/test_player.gd" id="1_p76u8"]
[ext_resource type="PackedScene" uid="uid://dpbjle7jau6df" path="res://UI/HUD/vitals/health_bar.tscn" id="2_0nl34"]
[ext_resource type="Script" path="res://player/interact_ray.gd" id="2_2h5an"]
[ext_resource type="PackedScene" uid="uid://2l28vknscmbj" path="res://UI/HUD/vitals/armor_bar.tscn" id="4_pcca8"]
[ext_resource type="PackedScene" uid="uid://cuamrk0x8gwq2" path="res://stamina_bar.tscn" id="5_tbfnt"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gsapo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yvmro"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_nhcc7"]
length = 2.49618

[node name="test_player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
script = ExtResource("1_p76u8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_gsapo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_yvmro")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.509135, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 119.8

[node name="InteractRay" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -2.5)
collision_mask = 4
collide_with_areas = true
script = ExtResource("2_2h5an")

[node name="Area3D" type="Area3D" parent="Head/Camera3D/InteractRay"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/InteractRay/Area3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_nhcc7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -12.0
offset_right = 8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerHealthBar" parent="HUD" instance=ExtResource("2_0nl34")]
offset_left = 32.0
offset_top = 1024.0
offset_right = 272.0
offset_bottom = 1028.0
max_value = 20.0
value = 3.0

[node name="ArmorBar" parent="HUD/PlayerHealthBar" instance=ExtResource("4_pcca8")]
layout_mode = 0
offset_left = 16.0
offset_top = -216.0
offset_right = 816.0
offset_bottom = 584.0
scale = Vector2(0.262868, 0.262868)
tint_under = Color(1, 1, 1, 0.411765)

[node name="StaminaBar" parent="HUD/PlayerHealthBar" instance=ExtResource("5_tbfnt")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 711.0
offset_top = -4.0
offset_right = 951.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
max_value = 6.0
value = 1.0

[connection signal="body_entered" from="Head/Camera3D/InteractRay/Area3D" to="Head/Camera3D/InteractRay" method="_on_object_colliding"]
[connection signal="body_exited" from="Head/Camera3D/InteractRay/Area3D" to="Head/Camera3D/InteractRay" method="_on_object_avert"]
